# vscode-workspace-gen

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .vscode-workspace-gen.json  CHANGELOG.md  Cargo.toml  README.md  build.sh  cargo_update.sh  vscode.code-workspace  vscode.code-workspace.template
.github/workflows/: cargo-update.yml  lints.yml  release.yml  sanitizers.yml  tests.yml
src/: cmake.rs  config.rs  cpp.rs  main.rs  project.rs  qt.rs  tests.rs  workspace.rs
templates/: qt.code-workspace.template
test_data/projects_folder/a/: project.json
test_data/projects_folder/b/: project.json
test_data/projects_folder/c/d/: project.json
test_data/projects_folder/depends/: project.json
