# SPDX-License-Identifier: MIT

[package]
name = "vscode-workspace-gen"
version = "1.0.0"
edition = "2021"
exclude = [
    ".github/*",
    "vscode*"
]
homepage = "https://github.com/iamsergio/vscode-workspace-gen"
repository = "https://github.com/iamsergio/vscode-workspace-gen"
license = "MIT"
description = "Generates vscode workspace files from a template"
keywords = ["cli", "vscode"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115", features = ["preserve_order", "indexmap"] }
